--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 # Test Project
+The link below is just for testing:
+
+[![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://github.com/codespaces/new?hide_repo_select=true&ref=main&repo=<REPOSITORY_ID>)
 
 ## Overview
 
@@ -35,3 +38,5 @@ As this is a personal test project, contributions are not expected or encouraged
 ---
 
 *Remember: This is just a test. No real projects were harmed in the making of this repository.*
+
+
