--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 # Test Project
 The link below is just for testing:
 
-[![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://github.com/codespaces.new/elsantibanez/test-rep)
+[![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://github.com/codespaces/new?hide_repo_select=true&ref=main&repo=test-rep)
 
 ## Overview
 
