--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 # Test Project
 The link below is just for testing:
 
-[![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://github.com/codespaces/new?hide_repo_select=true&ref=main&repo=test-rep)
-
+[![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://github.com/codespaces/new?hide_repo_select=true&ref=main&repo=<test-rep>)
 ## Overview
 
 This is a test project created solely for the purpose of exploring GitHub features and practicing version control. The contents of this repository are not intended for practical use.
